--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3080120230428001",
     "@dcloudio/uni-ui": "^1.4.28",
     "pinia": "^2.0.27",
+    "pinia-plugin-persistedstate": "^3.2.0",
     "vue": "^3.2.45",
     "vue-i18n": "^9.2.2"
   },
